fix photo stretch for 4k ultra HD screen

--- a/sass/composants/_instructions-btn.scss
+++ b/sass/composants/_instructions-btn.scss
@@ -71,7 +71,8 @@
                 font-size: 1.4rem;
             }
 
-            &:hover {
+            &:hover,
+            &:active {
                 background-color: lighten($color: $primary_color, $amount: 35%);
 
                 & i {
