--- a/sass/layouts/_venue.scss
+++ b/sass/layouts/_venue.scss
@@ -13,19 +13,26 @@
         height: 430px;
     }
 
-    &__photo img {
-        display: inline-flex;
-        width: 100%;
-        height: 280px;
-        object-fit: fill;
-        overflow: hidden;
+    &__photo {
+        margin-right: auto;
+        margin-left: auto;
 
-        @include tablet {
-            height: 310px;
-        }
+        & img {
+            display: inline-flex;
+            width: 100%;
+            height: 280px;
+            object-fit: fill;
+            overflow: hidden;
 
-        @include desktop {
-            height: 410px;
+            @include tablet {
+                height: 310px;
+            }
+
+            @include desktop {
+                height: 410px;
+                max-width: 2400px;
+                min-width: 2400px;
+            }
         }
     }
 
@@ -117,3 +124,8 @@
         stroke-opacity: 0;
     }
 }
+
+
+
+
+
